--- a/COLTEXT-FRONT/HTML/logIn.html
+++ b/COLTEXT-FRONT/HTML/logIn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\SENA\Downloads\FRONT BRYAN\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link href='https://fonts.googleapis.com/css?family=DM Serif Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <title>Log in COLTEXT</title>
