commit de actualizacion creacion de formularios

--- a/COLTEXT-FRONT/HTML/logIn.html
+++ b/COLTEXT-FRONT/HTML/logIn.html
@@ -3,35 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="C:\Users\Sena\Downloads\Diseño Web clase 6\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link href='https://fonts.googleapis.com/css?family=DM Serif Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-    <title>Log in COLTEXT</title>
+    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css'rel='stylesheet'>
+    <title>Ingreso COLTEXT</title>
 </head>
 <body>  
     <div class="banner">
-        <a href="enlace_pagina1.html" class="button">Botón 1</a>
+        <a href="login.html" class="btn1"></a>
         <div class="center-text">
-            <h1>COLTEXT</h1>
+            <h1 class="titlefont">COLTEXT</h1>
         </div>
-        <a href="enlace_pagina2.html" class="button">Botón 2</a>
-        <a href="enlace_pagina3.html" class="button">Botón 3</a>
+        <a href="404.html" class="btn2"></a>
+        <a href="500.html" class="btn3"></a>
     </div>
-    <div class="container">
-        <h1 class="titlefont">Ingreso</h1>
-        <p>Registra tus credenciales</p>
-        
-        <form action="#" method="post">
-            <label for="correo">Correo:</label>
-            <br>
-            <input type="text" id="correo" name="correo" required>
-            <br>
-            <label for="contraseña">Contraseña:</label>
-            <br>
-            <input type="password" id="contraseña" name="contraseña" required>
-            <br>
-            <input type="submit" value="Log In">
-        </form>
+    <div class="divider"></div>
+    <div class="padre">
+        <div class="container1">
+            <h1 class="titlefont">Ingreso</h1>
+            <p>Registra tus credenciales</p>
+            
+            <form action="#" method="post">
+                <label for="correo">Correo:</label>
+                <br>
+                <input type="text" id="correo" name="correo" required>
+                <br>
+                <label for="contraseña">Contraseña:</label>
+                <br>
+                <input type="password" id="contraseña" name="contraseña" required>
+                <br>
+                <input type="submit" value="Ingresa">
+            </form>
+        </div>
     </div>
+
 </body>
 </html>
