commit de actualizacion: validacion de formularios

--- a/COLTEXT-FRONT/HTML/500.html
+++ b/COLTEXT-FRONT/HTML/500.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 500</title>
     <link rel="stylesheet" href="C:\Users\Sena\Downloads\Diseño Web clase 6\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css'rel='stylesheet'>
 </head>
-<body class="error-body">
-    <div class="error-container">
-        <div class="error-image">
-            <img src="C:\Users\Sena\Downloads\Diseño Web clase 6\COLTEXT-FRONT\COLTEXT-FRONT\multimedia\1 sin fondo.png" alt="Error 404" href="login.html">
-        </div>
-        <div class="error-content">
-            <h1 class="titlefont">500 Error</h1>
-            <p class="p-cuadrado">¡Lo sentimos! Hubo un problema en el servidor y no pudimos completar tu solicitud en este momento. <br> El equipo técnico de COLTEXT ha sido notificado y está trabajando para resolver el problema. <br> Por favor, inténtalo de nuevo más tarde o contáctenos si el problema persiste.</p>
+<body>
+    <div class="banner">
+        <a href="login.html" class="btn1"></a>
+    </div>
+    <div class="error-body">
+        <div class="error-container">
+            <div class="error-image">
+                <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\1 sin fondo.png" alt="Error 404" href="login.html">
+            </div>
+            <div class="error-content">
+                <h1 class="titlefont">500 Error</h1>
+                <p class="p-cuadrado">¡Lo sentimos! Hubo un problema en el servidor y no pudimos completar tu solicitud en este momento. <br> El equipo técnico de COLTEXT ha sido notificado y está trabajando para resolver el problema. <br> Por favor, inténtalo de nuevo más tarde o contáctenos si el problema persiste.</p>
+            </div>
         </div>
     </div>
 </body>
