--- a/COLTEXT-FRONT/HTML/pqrs.html
+++ b/COLTEXT-FRONT/HTML/pqrs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="C:\Users\Sena\Downloads\Diseño Web clase 6\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link href='https://fonts.googleapis.com/css?family=DM Serif Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css'rel='stylesheet'>
@@ -24,17 +25,55 @@
             <h1 class="titlefont">PQRS</h1>
             <h2>Tu opinion es Importante para nosotros</h2>
             <p>Contacta con COLTEXT</p>
-            
-            <form action="#" method="post">
-                <label for="correo">Correo:</label>
-                <br>
-                <input type="text" id="correo" name="correo" required>
-                <br>
-                <label for="contraseña">Contraseña:</label>
-                <br>
-                <input type="password" id="contraseña" name="contraseña" required>
-                <br>
-                <input type="submit" value="Log In">
+            <form>
+                <div class="form-group">
+                    <label>Nombre</label>
+                    <input type="text" class="form-control" placeholder="Ej. Cesar">
+                </div>
+                <div class="form-group">
+                    <label>Apellido</label>
+                    <input type="text" class="form-control" placeholder="Ej. Bryan Campuzano">
+                </div>
+                <div class="form-group">
+                    <label>Dirección</label>
+                    <input type="text" class="form-control" placeholder="Ej. Cra 8 # 00-00">
+                </div>
+                <div class="form-group">
+                    <label>Ciudad</label>
+                    <input type="text" class="form-control" placeholder="Ej. Bogotá">
+                </div>
+                <div class="form-group">
+                    <label>Documento de Identidad*</label>
+                    <select class="form-control">
+                        <option>-Ninguno-</option>
+                        <option value="C.C.">C.C.</option>
+                        <option value="C.E.">C.E.</option>
+                        <option value="T.I.">Tarjeta de Identidad</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>N° de Documento</label>
+                    <input type="text" class="form-control" placeholder="Ej. 40125201">
+                </div>
+                <div class="form-group">
+                    <label>Correo electrónico</label>
+                    <input type="email" class="form-control" placeholder="Ej. nombre@correo.com">
+                </div>
+                <div class="form-group">
+                    <label>Teléfono</label>
+                    <input type="text" class="form-control" placeholder="Ej. 1 294-0008">
+                </div>
+                <label class="radio-inline">
+                    <input type="radio" name="tipo" checked> Producto
+                </label>
+                <label class="radio-inline">
+                    <input type="radio" name="tipo"> Servicio
+                </label>
+                <div class="form-group">
+                    <label>Descripcion</label>
+                    <textarea class="form-control" rows="5"></textarea>
+                </div>
+                <input type="submit" class="btn btn-block btn-lg btn-primary">
             </form>
         </div>
     </div>
