--- a/COLTEXT-FRONT/HTML/404.html
+++ b/COLTEXT-FRONT/HTML/404.html
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 404</title>
     <link rel="stylesheet" href="C:\Users\Sena\Downloads\Diseño Web clase 6\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
-    <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css'rel='stylesheet'>
+    <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css'>
 </head>
-<body class="error-body">
-    <div class="error-container">
-        <div class="error-image">
-            <img src="C:\Users\Sena\Downloads\Diseño Web clase 6\COLTEXT-FRONT\COLTEXT-FRONT\multimedia\1 sin fondo.png" alt="Error 404" href="login.html">
-        </div>
-        <div class="error-content">
-            <h1 class="titlefont">404 Error</h1>
-            <p class="p-cuadrado">¡Ups! Parece que esta página no está disponible.<br> Pero no te preocupes, tenemos mucho mas para ofrecerte en la Pagina Principal de COLTEXT.</p>
+<body>
+    <div class="banner">
+        <a href="login.html" class="btn1"></a>
+    </div>
+    <div class="error-body">
+        <div class="error-container">
+            <div class="error-image">
+                <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\1 sin fondo.png" alt="error 404">
+            </div>
+            <div class="error-content">
+                <h1 class="titlefont">404 Error</h1>
+                <p class="p-cuadrado">¡Ups! Parece que esta página no está disponible.<br> Pero no te preocupes, tenemos mucho mas para ofrecerte en la Pagina Principal de COLTEXT.</p>
+            </div>
         </div>
     </div>
 </body>
