--- a/COLTEXT-FRONT/HTML/logIn.html
+++ b/COLTEXT-FRONT/HTML/logIn.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="C:\Users\Sena\Downloads\Diseño Web clase 6\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link href='https://fonts.googleapis.com/css?family=DM Serif Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css'rel='stylesheet'>
@@ -18,25 +19,30 @@
         <a href="404.html" class="btn2"></a>
         <a href="500.html" class="btn3"></a>
     </div>
+
     <div class="divider"></div>
     <div class="padre">
         <div class="container1">
             <h1 class="titlefont">Ingreso</h1>
             <p>Registra tus credenciales</p>
-            
-            <form action="#" method="post">
-                <label for="correo">Correo:</label>
-                <br>
-                <input type="text" id="correo" name="correo" required>
-                <br>
-                <label for="contraseña">Contraseña:</label>
-                <br>
-                <input type="password" id="contraseña" name="contraseña" required>
-                <br>
-                <input type="submit" value="Ingresa">
+            <form>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Correo Electrónico</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <small id="emailHelp" class="form-text text-muted">Tu informacion es privada y no será compartida con nadie</small>
+                    </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Contraseña</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
+
         </div>
     </div>
-
 </body>
 </html>
