commit de actualizacion: creacion del dashboard y validacion de formularios

--- a/COLTEXT-FRONT/HTML/pqrs.html
+++ b/COLTEXT-FRONT/HTML/pqrs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\Sena\Downloads\Diseño Web clase 6\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link href='https://fonts.googleapis.com/css?family=DM Serif Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -12,7 +12,7 @@
 </head>
 <body>  
     <div class="banner">
-        <a href="login.html" class="btn1"></a>
+        <a href="home.html" class="btn1"></a>
         <div class="center-text">
             <h1 class="titlefont">COLTEXT</h1>
         </div>
