--- a/COLTEXT-FRONT/HTML/500.html
+++ b/COLTEXT-FRONT/HTML/500.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 500</title>
-    <link rel="stylesheet" href="C:\Users\Sena\Downloads\Diseño Web clase 6\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css'rel='stylesheet'>
 </head>
 <body>
     <div class="banner">
-        <a href="login.html" class="btn1"></a>
+        <a href="home.html" class="btn1"></a>
     </div>
     <div class="error-body">
         <div class="error-container">
             <div class="error-image">
-                <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\1 sin fondo.png" alt="Error 404" href="login.html">
+                <img src="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\multimedia\1 sin fondo.png" alt="Error 404" href="login.html">
             </div>
             <div class="error-content">
                 <h1 class="titlefont">500 Error</h1>
