--- a/COLTEXT-FRONT/HTML/logIn.html
+++ b/COLTEXT-FRONT/HTML/logIn.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\Sena\Downloads\Diseño Web clase 6\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link href='https://fonts.googleapis.com/css?family=DM Serif Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -12,7 +12,7 @@
 </head>
 <body>  
     <div class="banner">
-        <a href="login.html" class="btn1"></a>
+        <a href="home.html" class="btn1"></a>
         <div class="center-text">
             <h1 class="titlefont">COLTEXT</h1>
         </div>
@@ -28,17 +28,14 @@
             <form>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Correo Electrónico</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="bryan@coltext.com" required>
                     <small id="emailHelp" class="form-text text-muted">Tu informacion es privada y no será compartida con nadie</small>
-                    </div>
+                </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Contraseña</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña" required>
                 </div>
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div>
+                <div class="divider2"></div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
 
