--- a/COLTEXT-FRONT/HTML/register.html
+++ b/COLTEXT-FRONT/HTML/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="C:\Users\Sena\Downloads\Diseño Web clase 6\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
-    <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
     <link href='https://fonts.googleapis.com/css?family=DM Serif Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css'rel='stylesheet'>
@@ -12,7 +12,7 @@
 </head>
 <body>  
     <div class="banner">
-        <a href="login.html" class="btn1"></a>
+        <a href="home.html" class="btn1"></a>
         <div class="center-text">
             <h1 class="titlefont">COLTEXT</h1>
         </div>
@@ -39,17 +39,17 @@
             <form class="container2">
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                        <label for="inputEmail4">Email</label>
-                        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                        <label for="inputEmail4">Correo electrónico</label>
+                        <input type="email" class="form-control" id="inputEmail4" aria-describedby="emailHelp" placeholder="Bryan@coltext.com" required>
                     </div>
                 <div class="form-group col-md-6">
-                    <label for="inputPassword4">Password</label>
-                    <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                    <label for="inputPassword4">Contraseña</label>
+                    <input type="password" class="form-control" id="Password" placeholder="Contraseña" required>
                 </div>
                 </div>
                 <div class="form-group">
                     <label for="inputAddress">Address</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    <input type="text" class="form-control" id="inputAddress" placeholder="Ej. Cra 8 # 00-00" required>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
@@ -73,16 +73,8 @@
                         </div>
                         <div class="form-group col-md-2">
                             <label for="inputZip">Zip</label>
-                            <input type="text" class="form-control" id="inputZip">
+                            <input type="text" class="form-control" id="inputZip" required>
                         </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                        Check me out
-                    </label>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Sign in</button>
