commit de actualizacion: creacion del home, footer y demas mejoras del front

--- a/COLTEXT-FRONT/HTML/404.html
+++ b/COLTEXT-FRONT/HTML/404.html
@@ -15,13 +15,17 @@
     <div class="error-body">
         <div class="error-container">
             <div class="error-image">
-                <img src="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\multimedia\1 sin fondo.png" alt="error 404">
+                <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\1 sin fondo.png" alt="error 404">
             </div>
             <div class="error-content">
                 <h1 class="titlefont">404 Error</h1>
                 <p class="p-cuadrado">¡Ups! Parece que esta página no está disponible.<br> Pero no te preocupes, tenemos mucho mas para ofrecerte en la Pagina Principal de COLTEXT.</p>
             </div>
         </div>
+    </div>
+    <div class="footer1">
+        <a class="btn1"></a>
+        <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\coltext-reservado.PNG" alt="COLTEXT R" width="120" height="50">
     </div>
 </body>
 </html>
