--- a/COLTEXT-FRONT/HTML/logIn.html
+++ b/COLTEXT-FRONT/HTML/logIn.html
@@ -38,8 +38,12 @@
                 <div class="divider2"></div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-
         </div>
+    </div>
+    <div class="divider"></div>
+    <div class="footer1">
+        <a class="btn1"></a>
+        <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\coltext-reservado.PNG" alt="COLTEXT R" width="120" height="50">
     </div>
 </body>
 </html>
