--- a/COLTEXT-FRONT/HTML/500.html
+++ b/COLTEXT-FRONT/HTML/500.html
@@ -15,13 +15,17 @@
     <div class="error-body">
         <div class="error-container">
             <div class="error-image">
-                <img src="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\multimedia\1 sin fondo.png" alt="Error 404" href="login.html">
+                <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\1 sin fondo.png" alt="Error 404" href="login.html">
             </div>
             <div class="error-content">
                 <h1 class="titlefont">500 Error</h1>
                 <p class="p-cuadrado">¡Lo sentimos! Hubo un problema en el servidor y no pudimos completar tu solicitud en este momento. <br> El equipo técnico de COLTEXT ha sido notificado y está trabajando para resolver el problema. <br> Por favor, inténtalo de nuevo más tarde o contáctenos si el problema persiste.</p>
             </div>
         </div>
+    </div>
+    <div class="footer1">
+        <a class="btn1"></a>
+        <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\coltext-reservado.PNG" alt="COLTEXT R" width="120" height="50">
     </div>
 </body>
 </html>
