--- a/COLTEXT-FRONT/HTML/dashboard.html
+++ b/COLTEXT-FRONT/HTML/dashboard.html
@@ -63,7 +63,7 @@
                         <h3>Ingresos Generales</h3>
                         <p>Datos de las ventas a tiempo real</p>
                         <div class="banner2">
-                            <img src="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\multimedia\barras.png" width="100" height="100">
+                            <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\barras.png" width="100" height="100">
                             <button>Ampliar</button>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                         <h3>Capacidad de Bodega</h3>
                         <p>Estado de la Bodega a tiempo real</p>
                         <div class="banner2">
-                            <img src="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\multimedia\inventario.png" width="100" height="100">
+                            <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\inventario.png" width="100" height="100">
                             <button>Ampliar</button>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                         <h3>Popularidad</h3>
                         <p>Satisfacción General de nuestros clientes</p>
                         <div class="banner2">
-                            <img src="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\multimedia\popularidad.png" width="100" height="100">
+                            <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\popularidad.png" width="100" height="100">
                             <button>Ampliar</button>
                         </div>
                     </div>
@@ -88,6 +88,10 @@
             </section>
             </section>
     </div>
-    
+    <div class="divider"></div>
+    <div class="footer1">
+        <a class="btn1"></a>
+        <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\coltext-reservado.PNG" alt="COLTEXT R" width="120" height="50">
+    </div>
 </body>
 </html>
