--- a/COLTEXT-FRONT/HTML/home.html
+++ b/COLTEXT-FRONT/HTML/home.html
@@ -22,7 +22,57 @@
         <a href="404.html" class="btn2"></a>
         <a href="500.html" class="btn3"></a>
     </div>
-    <h1>home</h1>
+    <div class="divider"></div>
+    <div class="container4">
+        <h1 class="titlefont">Especialistas en Textiles</h1>
+        <p> COLTEXT tiene el mejor surtido <br>
+            de insumos tanto nacionales como <br>
+            importados para su Pyme. <br>
+            ¡Consulta nuestro catalogo!</p>
+        <button class="btnpqrs">Registrar PQRS</button>
+    </div>
+    <div class="divider"></div>
+    <section class="main">
+        <div class="main-skills">
+            <div class="card">
+                <h3>Beneficios Para Clientes</h3>
+                <p>Si eres comprador de COLTEXT tendrás estas ventajas</p>
+                <button><a href="register.html">¡REGÍSTRATE!</a></button>
+            </div>
+        <div class="card">
+            <h3>Calidad de Insumos</h3>
+            <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\b3.png" width="100" height="100">
+        </div>
+        <div class="card">
+            <h3>Distribuidores Nacionales</h3>
+            <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\b2.png" width="100" height="100">
+        </div>
+        <div class="card">
+            <h3>Relaciones mas Cercanas</h3>
+            <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\b1.png" width="100" height="100">
+            </div>
+        </div>
+    </section>
+    <div class="footer1">
+        <a class="btn1"></a>
+        <div class="container3">
+            <h3 class="titlefont2">CONTÁCTENOS</h3>
+            <div class="banner">
+                <a class="btn4"></a>
+                <a class="btn5"></a>
+                <a class="btn6"></a>
+            </div>
+            <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\coltext-reservado.PNG" alt="COLTEXT R" width="120" height="50">
+        </div>
+        <div class="container3">
+            <h3 class="titlefont2">¿Inconvenientes con nuestros Servicios?</h3>
+            <button class="btnpqrs"><a href="pqrs.html">Registrar PQRS</a></button>
+            <div class="container3">
+                <h3 class="titlefont2">iconos usados cortesía de:</h3>
+                <a href="https://icons8.com" class="titlefont2">Icons8</a>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
