commit de Actualizacion: prueba de repositorio

--- a/COLTEXT-FRONT/HTML/home.html
+++ b/COLTEXT-FRONT/HTML/home.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
-    <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="/home/bryan/Proyectos de Programación/FRONT/COLTEXT-FRONT/COLTEXT-FRONT/CSS/stylesheet.css">
     <link href='https://fonts.googleapis.com/css?family=DM Serif Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css'rel='stylesheet'>
@@ -41,15 +40,15 @@
             </div>
         <div class="card">
             <h3>Calidad de Insumos</h3>
-            <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\b3.png" width="100" height="100">
+            <img src="/home/bryan/Proyectos de Programación/FRONT/COLTEXT-FRONT/COLTEXT-FRONT/multimedia/b3.png" width="100" height="100">
         </div>
         <div class="card">
             <h3>Distribuidores Nacionales</h3>
-            <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\b2.png" width="100" height="100">
+            <img src="/home/bryan/Proyectos de Programación/FRONT/COLTEXT-FRONT/COLTEXT-FRONT/multimedia/b2.png" width="100" height="100">
         </div>
         <div class="card">
             <h3>Relaciones mas Cercanas</h3>
-            <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\b1.png" width="100" height="100">
+            <img src="/home/bryan/Proyectos de Programación/FRONT/COLTEXT-FRONT/COLTEXT-FRONT/multimedia/b1.png" width="100" height="100">
             </div>
         </div>
     </section>
@@ -62,7 +61,7 @@
                 <a class="btn5"></a>
                 <a class="btn6"></a>
             </div>
-            <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\coltext-reservado.PNG" alt="COLTEXT R" width="120" height="50">
+            <img src="/home/bryan/Proyectos de Programación/FRONT/COLTEXT-FRONT/COLTEXT-FRONT/multimedia/coltext-reservado.PNG" alt="COLTEXT R" width="120" height="50">
         </div>
         <div class="container3">
             <h3 class="titlefont2">¿Inconvenientes con nuestros Servicios?</h3>
