--- a/COLTEXT-FRONT/HTML/404.html
+++ b/COLTEXT-FRONT/HTML/404.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 404</title>
-    <link rel="stylesheet" href="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
-    <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="/home/bryan/Proyectos de Programación/FRONT/COLTEXT-FRONT/COLTEXT-FRONT/CSS/stylesheet.css">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css'>
 </head>
 <body>
@@ -15,7 +14,7 @@
     <div class="error-body">
         <div class="error-container">
             <div class="error-image">
-                <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\1 sin fondo.png" alt="error 404">
+                <img src="/home/bryan/Proyectos de Programación/FRONT/COLTEXT-FRONT/COLTEXT-FRONT/multimedia/1 sin fondo.png" alt="error 404">
             </div>
             <div class="error-content">
                 <h1 class="titlefont">404 Error</h1>
@@ -25,7 +24,7 @@
     </div>
     <div class="footer1">
         <a class="btn1"></a>
-        <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\coltext-reservado.PNG" alt="COLTEXT R" width="120" height="50">
+        <img src="/home/bryan/Proyectos de Programación/FRONT/COLTEXT-FRONT/COLTEXT-FRONT/multimedia/coltext-reservado.PNG" alt="COLTEXT R" width="120" height="50">
     </div>
 </body>
 </html>
