--- a/COLTEXT-FRONT/HTML/register.html
+++ b/COLTEXT-FRONT/HTML/register.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
-    <link rel="stylesheet" href="C:\Users\Sena\Downloads\COLTEXT-FRONT\COLTEXT-FRONT\CSS\stylesheet.css">
+    <link rel="stylesheet" href="/home/bryan/Proyectos de Programación/FRONT/COLTEXT-FRONT/COLTEXT-FRONT/CSS/stylesheet.css">
     <link href='https://fonts.googleapis.com/css?family=DM Serif Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <link href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css'rel='stylesheet'>
@@ -84,7 +83,7 @@
     <div class="divider"></div>
     <div class="footer1">
         <a class="btn1"></a>
-        <img src="C:\Users\HP\Downloads\ADSObryan\FRONT\COLTEXT-FRONT\multimedia\coltext-reservado.PNG" alt="COLTEXT R" width="120" height="50">
+        <img src="/home/bryan/Proyectos de Programación/FRONT/COLTEXT-FRONT/COLTEXT-FRONT/multimedia/coltext-reservado.PNG" alt="COLTEXT R" width="120" height="50">
     </div>
 </body>
 </html>
